# alfred-workflow-py3

./: .gitignore  .pre-commit-config.yaml  LICENCE.txt  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: continuous-integration.yml
docs/: conf.py  licence.rst  toc.rst.inc
extras/: benchmark.py  gen_icon_table.py  generate_workflow_list.py
extras/benchmarks/03-read-envvars/: script.py
tests/: conftest.py  test_background.py  test_notify.py  test_update.py  test_update_versions.py  test_util.py  test_util_atomic.py  test_util_lockfile.py  test_util_uninterruptible.py  test_workflow.py  test_workflow3.py  test_workflow_encoding.py  test_workflow_env.py  test_workflow_files.py  test_workflow_filter.py  test_workflow_import.py  test_workflow_keychain.py  test_workflow_magic.py  test_workflow_magic_alfred2.py  test_workflow_run.py  test_workflow_serializers.py  test_workflow_settings.py  test_workflow_update.py  test_workflow_versions.py  test_workflow_xml.py  util.py
workflow/: __init__.py  background.py  notify.py  update.py  util.py  workflow.py  workflow3.py
