[tool.poetry]
name = "alfred-workflow-tddschn"
version = "0.1.5"
description = "Full-featured helper library for writing Alfred 2/3/4 workflows, with Python 3"
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [{ include = "workflow" }]
readme = "README.md"
homepage = "https://github.com/tddschn/alfred-workflow-py3"
repository = "https://github.com/tddschn/alfred-workflow-py3"
keywords = ["alfred", "workflow"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/alfred-workflow-py3/issues"

[tool.poetry.dependencies]
python = "^3.10"
six = "^1.16.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-httpbin = "^1.0.2"
pytest-localserver = "^0.5.1"
yapf = "^0.32.0"
toml = "^0.10.2"
better-exceptions = "^0.3.3"
bump2version = "^1.0.1"
pyobjc-framework-Cocoa = "^8.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
# select = ["E", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
# unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
# [tool.ruff.per-file-ignores]
# "__init__.py" = ["E402"]
# "path/to/file.py" = ["E402"]
# "**/{tests,docs,tools}/*" = ["E402"]
